[project]
name = "expense-tracker"
version = "1.0.0"
description = "A simple CLI expense tracker"
authors = [{ name = "Muhammed Asjad", email = "mhdasjad877@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "click==8.2.1",
    "SQLAlchemy==2.0.43",
    "rich>=13.0.0", 
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[project.scripts]
expense = "expense_tracker.cli.cli:cli"
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
